--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -11,8 +11,8 @@ services:
       - POSTGRES_PASSWORD=ujon_pw
       - TZ=UTC
     volumes:
-      - ~/volume/ujon/postgres/local/data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - .infra/postgres/data:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d
 
     
 
