--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -12,7 +12,7 @@ services:
       - TZ=UTC
     volumes:
       - plcaeholder:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/init:/docker-entrypoint-initdb.d
 
     
 
