chore: update shell scripts

--- a/config/flyway.conf
+++ b/config/flyway.conf
@@ -3,6 +3,7 @@ flyway.user=ujon
 flyway.password=ujon_pw
 flyway.schemas=public
 flyway.sqlMigrationPrefix=v
+; flyway.baselineVersion=1
 ; flyway.sqlMigrationSeparator=__
 ; flyway.sqlMigrationSuffixes=.sql
 ; flyway.sqlMigrationVersionPattern=^[0-9]+\.[0-9]+\.[0-9]+$
