fix: github action

--- a/.github/workflows/flyway_migrate.yml
+++ b/.github/workflows/flyway_migrate.yml
@@ -17,10 +17,10 @@ jobs:
         run: |
           echo "${{ secrets.FLYWAY_CONFIG }}" | base64 --decode > flyway.conf
           cat flyway.conf
-
-      - name: Migrate database
-        uses: docker://redgate/flyway:10.21.0
-        with:
-          args: >-
-            migrate
-            -configFiles=flyway.conf
+#
+#      - name: Migrate database
+#        uses: docker://redgate/flyway:10.21.0
+#        with:
+#          args: >-
+#            migrate
+#            -configFiles=flyway.conf
