--- a/.github/workflows/flyway_validate.yml
+++ b/.github/workflows/flyway_validate.yml
@@ -4,9 +4,13 @@ on:
   push:
     paths:
       - "db/**"
+    tags-ignore:
+      - "*"
   pull_request:
     paths:
       - "db/**"
+    tags-ignore:
+      - "*"
   workflow_dispatch:
 
 jobs:
