chore update docker config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,15 @@ services:
     volumes:
       - .infra/postgres/data:/var/lib/postgresql/data
       - ./db/init:/docker-entrypoint-initdb.d
+    networks:
+      - ujon_default
 
-    
+# docker network create ujon_network
+networks:
+  ujon_default:
+    name: ujon_default
+    external: true
+
+
+
 
